--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "npx eslint ./src"
   },
   "keywords": [],
-  "author": "",
+  "author": "Md Nayeem Miah",
   "license": "ISC",
-  "description": "",
+  "description": "A fully scalable, production-ready **backend starter template** built with **Node.js**, **Express**, and **TypeScript** using a **clean modular architecture**.\r Perfect for small to large backend systems following industry best practices.",
   "dependencies": {
+    "@prisma/client": "^6.19.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "http-status": "^2.1.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
     "zod": "^4.1.13"
   },
@@ -26,11 +27,14 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^24.10.2",
+    "@types/node": "^24.10.3",
+    "@types/pg": "^8.16.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.7.4",
+    "prisma": "^6.19.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0"
