express rate limiting

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.22.1",
+    "express-rate-limit": "^8.2.1",
     "http-status": "^2.1.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
