--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=5000
-DATABASE_URL="mongodb+srv://name:passwrod@cluster0.bomlehy.mongodb.net/hello_prisma?appName=Cluster0"
+DATABASE_URL="your mongodb url"
 NODE_ENV=development
 hello_prisma
