--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "A fully scalable, production-ready **backend starter template** built with **Node.js**, **Express**, and **TypeScript** using a **clean modular architecture**.\r Perfect for small to large backend systems following industry best practices.",
   "dependencies": {
     "@prisma/client": "^6.19.1",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.22.1",
@@ -21,6 +22,8 @@
     "http-status": "^2.1.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.3",
     "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
