--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,12 @@
     ],
     "sourceMap": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
