--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,15 @@ PORT=5000
 DATABASE_URL="your mongodb url"
 NODE_ENV=development
 hello_prisma
+
+CLOUDINARY_API_SECRET=api_secret
+CLOUDINARY_CLOUD_NAME=cloud_name
+CLOUDINARY_API_KEY=api_key
+
+
+# email service provider
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password
+EMAIL_FROM="SMT Project <youremail@gmail.com>"
