--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.11",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/express": "^5.0.6",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.3",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
