--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "description": "A fully scalable, production-ready **backend starter template** built with **Node.js**, **Express**, and **TypeScript** using a **clean modular architecture**.\r Perfect for small to large backend systems following industry best practices.",
   "dependencies": {
     "@prisma/client": "^6.19.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.22.1",
     "express-rate-limit": "^8.2.1",
     "http-status": "^2.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
@@ -30,9 +33,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.3",
     "@types/nodemailer": "^7.0.4",
