--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,13 @@ JWT_ACCESS_SECRET="your-jwt-access-token"
 JWT_REFRESH_SECRET="your-jwt-refresh-token"
 
 
-# OPT VERIFY
+# GOOGLE LOGIN
+GOOGLE_CLIENT_ID=your-client-id
+GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_CALLBACK_URL=http://localhost:5000/api/v1/users/auth/google/callback
 
+
+# OPT VERIFY
 REDIS_HOST="localhost"
 REDIS_PORT="6379"
 REDIS_USERNAME="default"
