--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "A fully scalable, production-ready **backend starter template** built with **Node.js**, **Express**, and **TypeScript** using a **clean modular architecture**.\r Perfect for small to large backend systems following industry best practices.",
   "dependencies": {
     "@prisma/client": "^6.19.1",
+    "axios": "^1.13.2",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "nodemailer": "^7.0.11",
     "socket.io": "^4.8.1",
     "stripe": "^20.0.0",
+    "uuid": "^13.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
