--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.22.1",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
