--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "puppeteer": "^24.34.0",
     "redis": "^5.10.0",
     "socket.io": "^4.8.1",
     "stripe": "^20.0.0",
